# axum-template

./: Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: main.yml  release.yml
frontend/: README.md  index.html  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/pages/: AnotherPage.vue  HealthCheck.vue  HomePage.vue  NotFoundPage.vue
frontend/src/router/: index.ts
src/: assets.rs  main.rs
src/server/: mod.rs
