[package]
name = "axum_template"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = [] }
dirs = "6.0.0"
flate2 = "1.1.9"
reqwest = "0.13.2"
tar = "0.4.45"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version =  "0.6.8", features = ['fs'] }
